mdapipkg/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Account_Brand__c</fullName>
        <formula>TEXT(Account__r.Brand_Assortment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Person_Contact_Id__c</fullName>
        <formula>Account__r.PersonContact.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Person Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate_Id__c</fullName>
        <label>Affiliate Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_To_Charge__c</fullName>
        <formula>IF( Subscription_To__c != null || Subscription_To__r.Active__c == true , IF( Subscription_To__r.Charge_Amount__c &lt;= Subscription_Remains_Amount__c  , Subscription_To__r.Charge_Amount__c, Subscription_Remains_Amount__c )  , Grand_Total_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount to Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Charges_Amount__c</fullName>
        <label>Approved Charges Amount</label>
        <summarizedField>Order_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Transaction__c.Response_Status__c</field>
            <operation>contains</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Charge, Refund</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Approved_Charges_Count__c</fullName>
        <label>Approved Charges Count</label>
        <summaryFilterItems>
            <field>Order_Transaction__c.Response_Status__c</field>
            <operation>contains</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Charge, Refund</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <formula>IF( Subscription_To__c != null || Subscription_To__r.Active__c == true , Payment_Amount_Attempts__c - Subscription_Approved_Charges_Amount__c , Grand_Total_Amount__c - Approved_Charges_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Line_2__c</fullName>
        <label>Billing Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Company__c</fullName>
        <label>Billing Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_Fax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_First_Name__c</fullName>
        <label>Billing First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Last_Name__c</fullName>
        <label>Billing Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal__c</fullName>
        <label>Billing Zip/Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Link</label>
        <referenceTo>Campaign_Links__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <label>Charge Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chargeback_Case_Number__c</fullName>
        <label>Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_Date_Received__c</fullName>
        <label>Date Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Chargeback_Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chargeback_Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_Id__c</fullName>
        <externalId>true</externalId>
        <label>Connected Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Connection_Name__c</fullName>
        <label>Connection Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Discount__c</fullName>
        <label>Coupon Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>Swiss Franc</fullName>
                </value>
                <value>
                    <fullName>Euro</fullName>
                </value>
                <value>
                    <fullName>British Pound</fullName>
                </value>
                <value>
                    <fullName>New Zealand Dollar</fullName>
                </value>
                <value>
                    <fullName>Russian Ruble</fullName>
                </value>
                <value>
                    <fullName>Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>Thai Baht</fullName>
                </value>
                <value>
                    <fullName>Japan Yen</fullName>
                </value>
                <value>
                    <fullName>U.S. Dollar</fullName>
                    <default>true</default>
                    <label>U.S. Dollar</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Company__c</fullName>
        <formula>Billing_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_IP__c</fullName>
        <label>Customer IP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Failed_Transactions_Count__c</fullName>
        <label>Failed Transactions Total</label>
        <summaryFilterItems>
            <field>Order_Transaction__c.Response_Status__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fails_and_Refunds_Number__c</fullName>
        <formula>Number_of_Refunds__c +  Failed_Transactions_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refunds and Fails Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Amount__c</fullName>
        <formula>IF( Charge_Amount__c &lt;&gt; 0.0 , Charge_Amount__c ,  Total__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Url__c</fullName>
        <label>Landing Page Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Transaction__c</fullName>
        <label>Last Transaction</label>
        <summarizedField>Order_Transaction__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Order_Transaction__c.Response_Status__c</field>
            <operation>contains</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Manual_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box when you want to authorize or charge an amount different than the amount due on the order. This will prevent the &quot;Charge Amount&quot; from being automatically calculated and updated.</inlineHelpText>
        <label>Manual Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minfraud_Score__c</fullName>
        <label>Minfraud Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Named_Agent__c</fullName>
        <inlineHelpText>Choose Named Agent for payment process</inlineHelpText>
        <label>Named Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Transaction_Date__c</fullName>
        <label>Next Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Recurring_without_Refund__c</fullName>
        <label>Number of Recurring Without Refund</label>
        <summaryFilterItems>
            <field>Order_Transaction__c.Type__c</field>
            <operation>notEqual</operation>
            <value>Refund</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Transaction__c.Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Refunds__c</fullName>
        <label>Refunds Total</label>
        <summaryFilterItems>
            <field>Order_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Refund</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Information__c</fullName>
        <label>Order Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Item_Count__c</fullName>
        <label>Order Item Count</label>
        <summaryForeignKey>OrderItem__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Source__c</fullName>
        <label>Order Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cart</fullName>
                    <default>true</default>
                    <label>Cart</label>
                </value>
                <value>
                    <fullName>Francheese</fullName>
                </value>
                <value>
                    <fullName>Now</fullName>
                </value>
                <value>
                    <fullName>Funnel</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
                <value>
                    <fullName>Downsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parrent_Upsell_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parrent Upsell Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Upsell Orders</relationshipLabel>
        <relationshipName>Upsell_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Attempts__c</fullName>
        <label>Payment Amount Attempts</label>
        <summarizedField>Payment_Attempt__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment_Attempt__c.Ready_To_Payment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment_Attempt__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Count__c</fullName>
        <label>Payment Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_End_Date__c</fullName>
        <inlineHelpText>If &quot;Payment Stop&quot; is set to &quot;Date&quot; please enter the date when the payments will stop</inlineHelpText>
        <label>Payment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <inlineHelpText>Once - Single time, Daily - Each day, Weekly - Every 7 days, Monthly - Monthly same date, Quarterly - Every 4th mo. same date, Annual - Same date each year.</inlineHelpText>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Once</fullName>
                    <default>true</default>
                    <label>Once</label>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Biweekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Bimonthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Biennial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Check (Paper)</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Money Order</fullName>
                </value>
                <value>
                    <fullName>Google Checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <label>Payment Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Start_Date__c</fullName>
        <inlineHelpText>Start Date is date after which money will withdrawn</inlineHelpText>
        <label>Payment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Stop__c</fullName>
        <label>Payment Stop</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Balance Due</fullName>
                </value>
                <value>
                    <fullName>Unending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paypal_PayerId__c</fullName>
        <label>Paypal PayerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paypal_Token__c</fullName>
        <label>Paypal Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Domain_Url__c</fullName>
        <label>Referral Domain Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Funnel_Name__c</fullName>
        <label>Sales Funnel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Full_Name__c</fullName>
        <formula>Shipping_First_Name__c &amp; &quot; &quot; &amp;  Shipping_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipment Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Line_2__c</fullName>
        <label>Shipping Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_First_Name__c</fullName>
        <label>Shipping First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Name__c</fullName>
        <label>Shipping Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_On__c</fullName>
        <label>Shipping On</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Payment</fullName>
                    <default>true</default>
                    <label>Full Payment</label>
                </value>
                <value>
                    <fullName>First</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Phone__c</fullName>
        <label>Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Status__c</fullName>
        <label>Shipping Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Ready</fullName>
                    <default>true</default>
                    <label>Not Ready</label>
                </value>
                <value>
                    <fullName>Ready for Shipping</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal__c</fullName>
        <label>Shipping Zip/Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <label>Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Id1__c</fullName>
        <label>Sub Id1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Id2__c</fullName>
        <label>Sub Id2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Id3__c</fullName>
        <label>Sub Id3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <formula>Subtotal__c - Coupon_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Approved_Charges_Amount__c</fullName>
        <label>Subscription Approved Charges Amount</label>
        <summarizedField>Order_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Charge, Refund</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Transaction__c.Response_Status__c</field>
            <operation>contains</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Transaction__c.Subscription__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscription_Approved_Charges_Count__c</fullName>
        <label>Subscription Approved Charges Count</label>
        <summaryFilterItems>
            <field>Order_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Charge, Refund</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Transaction__c.Response_Status__c</field>
            <operation>contains</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Transaction__c.Subscription__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscription_Charge_Amount__c</fullName>
        <label>Subscription Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Count__c</fullName>
        <label>Subscription Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Frequency__c</fullName>
        <label>Subscription Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Not_Approved_Charges_Amount__c</fullName>
        <label>Subscription Not Approved Charges Amount</label>
        <summarizedField>Order_Transaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Order_Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Charge, Refund</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Transaction__c.Response_Status__c</field>
            <operation>notContain</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Order_Transaction__c.Subscription__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Order_Transaction__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>